<resources>
    <string name="app_name">Infinity Gaming</string>
    <string name="name">Name</string>
    <string name="dni">DNI</string>
    <string name="phoneNumber">Phone number</string>
    <string name="card">Card number</string>
    <string name="password">Password</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="search">Search</string>
    <string name="gameName">Game name</string>
    <string name="addImage">Add image</string>
    <string name="deleteImage">Delete image</string>
    <string name="gender">Gender:</string>
    <string name="rol">Rol:</string>
    <string name="update">Update</string>
    <string name="insert">Insert</string>
    <string name="confirm">Confirm</string>
    <string name="description">Game description</string>
    <string name="price">Game price</string>
    <string name="trendyGames">Trendy games</string>
    <string name="buy">Buy</string>
    <string name="bestSellers">Best Sellers</string>
    <string name="buyComplete">Purchase succesful</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="termsAndConditions">Terms and conditions</string>
    <string name="privacyPolitics">Privacy politics</string>
    <string name="contact">Contact</string>
    <string name="FAQ">FAQ</string>
    <string name="title_activity_tienda_admin">TiendaAdmin</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


</resources>