<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#42413e"
    tools:context=".ProductDetails">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/modificarButton"
                android:layout_width="160dp"
                android:layout_margin="15dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/update"
                android:background="@drawable/image_rounded"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/imageId"
                android:layout_width="600dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="@drawable/image_rounded"
                app:srcCompat="@drawable/eldenring" />


            <TextView
                android:id="@+id/descId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:gravity="center_horizontal"
                android:text="TextView"
                android:textColor="@color/white" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="24dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:text="@string/gender"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/genderText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:paddingLeft="10dp"
                    android:textSize="20dp"
                    android:text="TextView" />


            </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buyButton"
                    android:layout_width="225dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/image_rounded"
                    android:text="@string/buy" />


                <TextView
                    android:id="@+id/price"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:paddingLeft="16dp"
                    android:text="TextView"
                    android:textColor="@color/white"
                    android:textSize="15dp" />


            </LinearLayout>




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>